# wiki-skills

./: AGENTS.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/actions/parse-and-review/: action.yml
.github/workflows/: ci.yml  reviewer.yml
planning/: design.md  notes.md
planning/tasks/: 001-project-scaffolding.md  002-okf-types.md  003-dependency-checks.md  004-index-builder.md  005-okf-linter.md  006-query-fallback.md  007-install-command.md  008-cli-entry-point.md  009-bundled-skills.md
skills/implement-task-ticket/: SKILL.md
src/wiki_skills/: cli.py  deps.py  wiki.py
tests/: test_cli.py  test_deps.py  test_wiki.py
